# baize

./: .gitignore  .golangci.yml  .kazelcfg.json  BUILD.bazel  README.md  WORKSPACE  base.Dockerfile  config.yaml  executor.Dockerfile  go.mod  go.sum  print-workspace-status.sh  server.Dockerfile
.github/workflows/: flow.yaml
cmd/baize-executor/: BUILD.bazel  main.go
cmd/baize-server/: BUILD.bazel  main.go
cmd/debug-tools/: BUILD.bazel  main.go
cmd/executor/: main.go
cmd/remote-cache/: BUILD.bazel  main.go
deploy/docker-compose/: config.toml  docker-compose.yaml  down.sh  remote-cache-docker-compose.yaml  up.sh
doc/: README_zh.md  baize.drawio  scheduler_zh.md
hack/: BUILD.bazel  build-all-images.sh  install-bazel.sh  update-bazel.sh  update-deps.sh  verify-bazel.sh  verify-golangci-lint.sh  verify-proto.sh  verify-shellcheck.sh
images/: images.bzl
pkg/baize/: BUILD.bazel  ac.go  bytestream.go  cas.go  constants.go  exec.go  resource.go  server.go  util.go
pkg/cache_server/: BUILD.bazel  cache_server.go  cache_servers.go  caches_server_test.go  resource.go  resource_test.go
pkg/caches/: BUILD.bazel  action_cache.go  caches_test.go  composed_cache.go  composed_cache_test.go  disk_cache.go  disk_cache_test.go  error.go  memory_cache.go  memory_cache_test.go  metrics.go  redis_cache.go  redis_cache_test.go  suite_test.go  test.go  utils.go
pkg/cc/: BUILD.bazel  config.go  constants.go  resource.go  types.go
pkg/config/: BUILD.bazel  config.go
pkg/copy_from_buildbuddy/: README.md
pkg/copy_from_buildbuddy/utils/disk/: BUILD.bazel  disk.go
pkg/copy_from_buildbuddy/utils/hash/: BUILD.bazel  hash_test.go
pkg/copy_from_buildbuddy/utils/lru/: BUILD.bazel  lru.go  lru_test.go
pkg/copy_from_buildbuddy/utils/random/: BUILD.bazel  random.go
pkg/copy_from_buildbuddy/utils/status/: BUILD.bazel  status_test.go
pkg/execute_server/: execute_server.go
pkg/executor/: BUILD.bazel  executor.go  utils.go
pkg/interfaces/: BUILD.bazel  interfaces.go
pkg/proto/: BUILD.bazel
pkg/proto/executor/: BUILD.bazel  executor.pb.go  executor.proto
pkg/proto/scheduler/: BUILD.bazel  scheduler.pb.go  scheduler.proto
pkg/scheduler/: BUILD.bazel  executor.go  scheduler.go  utils.go
pkg/server/: ac.go  bytestream.go  cas.go  constants.go  exec.go  resource.go  server.go  util.go
pkg/utils/: BUILD.bazel  utils.go
pkg/utils/bazel/: BUILD.bazel  request.go
pkg/utils/commandutil/: BUILD.bazel  commandutil.go
pkg/utils/digest/: BUILD.bazel  digest.go
pkg/utils/disk_utils/: disk.go
pkg/utils/healthchecker/: BUILD.bazel  healthchecker.go
pkg/utils/lru/: lru.go  lru_test.go
pkg/utils/remotecacheutils/: BUILD.bazel  suite_test.go  url_utils.go
pkg/utils/status/: BUILD.bazel  status_test.go
