load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/dashjay/baize/cmd/baize-executor",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@io_k8s_kubernetes//pkg/util/rlimit:go_default_library",
    ],
)

go_binary(
    name = "baize-executor",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
