load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "ac.go",
        "bytestream.go",
        "cas.go",
        "constants.go",
        "exec.go",
        "resource.go",
        "server.go",
        "util.go",
    ],
    importpath = "github.com/dashjay/baize/pkg/baize",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/caches:go_default_library",
        "//pkg/config:go_default_library",
        "//pkg/interfaces:go_default_library",
        "//pkg/proto/scheduler:go_default_library",
        "//pkg/scheduler:go_default_library",
        "//pkg/utils:go_default_library",
        "//pkg/utils/commandutil:go_default_library",
        "//pkg/utils/digest:go_default_library",
        "//pkg/utils/status:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/known/anypb:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
