load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "composed_cache.go",
        "disk_cache.go",
        "error.go",
        "memory_cache.go",
        "metrics.go",
        "redis_cache.go",
        "utils.go",
    ],
    importpath = "github.com/dashjay/baize/pkg/caches",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/copy_from_buildbuddy/utils/disk:go_default_library",
        "//pkg/copy_from_buildbuddy/utils/lru:go_default_library",
        "//pkg/interfaces:go_default_library",
        "//pkg/utils:go_default_library",
        "//pkg/utils/status:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_go_redis_redis_v8//:go_default_library",
        "@com_github_orcaman_concurrent_map//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "caches_test.go",
        "suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/interfaces:go_default_library",
        "//pkg/utils:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
