filegroup(
    name = "all-protos",
    srcs = [
        "//pkg/proto/executor:executor_go_proto",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/proto/executor:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
