load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "scheduler_proto",
    srcs = ["scheduler.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//build/bazel/remote/execution/v2:v2_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
)

go_proto_library(
    name = "scheduler_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/dashjay/baize/pkg/proto/scheduler",
    proto = ":scheduler_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//build/bazel/remote/execution/v2:go_default_library",
        "@go_googleapis//google/rpc:status_go_proto",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":scheduler_go_proto"],
    importpath = "github.com/dashjay/baize/pkg/proto/scheduler",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
