load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["disk.go"],
    importpath = "github.com/dashjay/baize/pkg/copy_from_buildbuddy/utils/disk",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/copy_from_buildbuddy/utils/random:go_default_library",
        "//pkg/copy_from_buildbuddy/utils/status:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
